--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,10 @@ dependencies {
 
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
     implementation 'androidx.cardview:cardview:1.0.0'
-    
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
